--- a/message-demo-front/package.json
+++ b/message-demo-front/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.29.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.1.8",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
